Fixed bug #31213 (Sideeffects caused by fix of bug #29493)